--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "oauth-1.0a": "^2.2.6",
+    "nodemon": "^2.0.20",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
